app/assets/css/prose.css
@utility prose {
  & * + :is(h1, h2, h3, h4, h5, h6) {
    margin-block-start: 1.5em;
    margin-block-start: 1.5lh;
  }

  & :is(h1, h2, h3, h4, h5, h6):has(+ p) {
    margin-block-end: 1.5em;
    margin-block-end: 1.5lh;
  }

  & p + p {
    margin-block-start: 1em;
    margin-block-start: 1lh;
  }

  & ul,
  & ol {
    margin-block: 1.5em;
    margin-block: 1.5lh;
  }

  & ul ul,
  & ol ol {
    margin-block: 0.5em 1em;
    margin-block: 0.5lh 1lh;
  }

  & li,
  & li p {
    margin-block: 0.5em;
    margin-block: 0.5lh;
  }

  & ol,
  & ul {
    @apply type-p;

    text-align: left;
  }

  & ol {
    counter-reset: list-counter;
  }

  & ol li {
    display: flex;
    align-items: baseline;
    gap: 0.5em;
    counter-increment: list-counter;

    &::before {
      content: counter(list-counter) ".";
    }
  }

  & ul li {
    position: relative;
    padding-left: 1.25em;

    &::before {
      content: '';
      position: absolute;
      top: 0.5em;
      left: 0;
      width: 5px;
      height: 5px;
      border-radius: 50%;
      background-color: currentColor;
    }
  }

  & ul li li {
    &::before {
      border: 1px solid currentColor;
      background-color: transparent;
    }
  }

  & p a {
    text-decoration: underline;
    text-underline-offset: 0.1em;
    text-decoration-thickness: 1px;
    transition: opacity 0.2s var(--ease-out);

    &:hover {
      opacity: 0.6;
    }
  }

  & table {
    @apply type-p;

    display: block;
    padding-inline: var(--app-outer-gutter);
    overflow: auto hidden;
    overscroll-behavior-x: contain;
    margin-inline: calc(var(--app-outer-gutter) * -1);

    -ms-overflow-style: none;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  & th,
  & td {
    padding: 1em;
  }

  & td {
    min-width: 200px;
    border: 1px solid currentColor;
  }

  & tr {
    vertical-align: baseline;
  }

  & tbody tr:first-child {
    background-color: --alpha(currentColor / 20%);
  }

  & tbody tr:not(:first-child):nth-child(odd) {
    background-color: --alpha(currentColor / 5%);
  }
}

@utility prose-post {
  @apply prose;

  & * + :is(h1, h2, h3, h4, h5, h6) {
    margin-block-start: 5em;
    margin-block-start: 5lh;
  }
}

@utility prose-p {
  @apply prose;

  & p {
    @apply type-p;

    text-wrap: pretty;
    max-width: 55ch;
  }
}

@utility prose-all {
  @apply prose;

  & * + :is(h1, h2, h3, h4, h5, h6) {
    margin-block-start: 2em;
    margin-block-start: 2lh;
  }

  & :is(h1, h2, h3, h4, h5, h6):has(+ p) {
    margin-block-end: 0.75em;
    margin-block-end: 0.75lh;
  }

  & h1 {
    @apply type-h1;
  }

  & h1:first-child {
    margin-block: 3em;
    margin-block: 3lh;
  }

  & h2 {
    @apply type-h2;
  }

  & h3 {
    @apply type-h3;
  }

  & h4 {
    @apply type-h4;
  }

  & h5, h6 {
    @apply type-h5;
  }

  & p {
    @apply type-p;

    text-wrap: pretty;
  }
}

